--- a/Make_MovieAppService_with_ReactJs/React_Basic/6.Create_React_APP/movie_app/package.json
+++ b/Make_MovieAppService_with_ReactJs/React_Basic/6.Create_React_APP/movie_app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^3.2.3",
+    "nth-check": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -18,8 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy" : "gh-pages -d build",
-    "predeploy" : "npm run build"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +41,4 @@
     ]
   },
   "homepage": "https://ckdghks34.github.io/Lerning_NomadCoder.git"
-
 }
